[package]
name = "twitchmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitchchat = { version = "0.14", features = ["async", "async-io"] }
anyhow = "1.0"
futures-lite = "1.12.0"
async-executor = "1.4.1"
async-io = "1.6.0"
colored = "2.0.0"